--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>YouThumb</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700;800&family=Bangers&family=Roboto:wght@700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @keyframes fall {
@@ -32,6 +36,24 @@
       .tetromino-j { background-color: #0000f0; box-shadow: 0 0 15px #0000f0; }
       .tetromino-s { background-color: #00f000; box-shadow: 0 0 15px #00f000; }
       .tetromino-z { background-color: #f00000; box-shadow: 0 0 15px #f00000; }
+      body {
+        font-family: 'Inter', sans-serif;
+      }
+      @media (prefers-reduced-motion: reduce) {
+        .tetromino,
+        .animate-spin,
+        .animate-pulse {
+          animation: none;
+        }
+        
+        .transition-all,
+        .transition-colors,
+        .transition-transform,
+        .transition-opacity,
+        .transition {
+            transition-property: none;
+        }
+      }
     </style>
   <script type="importmap">
 {
@@ -44,9 +66,74 @@
   }
 }
 </script>
+<script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: "Inter, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, Apple Color Emoji, Segoe UI Emoji",
+            mono: "ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, monospace"
+          },
+          fontSize: {
+            'display': '48px', 'h1': '36px', 'h2': '30px', 'h3': '24px', 'h4': '20px',
+            'body-lg': '18px', 'body': '16px', 'body-sm': '14px', 'mono': '12px',
+          },
+          lineHeight: {
+            'display': '56px', 'h1': '44px', 'h2': '36px', 'h3': '32px', 'h4': '28px',
+            'body-lg': '28px', 'body': '24px', 'body-sm': '20px', 'mono': '18px',
+          },
+          fontWeight: {
+            medium: '500', bold: '700', extrabold: '800',
+          },
+          letterSpacing: {
+            'display': '-0.01em',
+          },
+          spacing: {
+            "0.5": "2px", "1": "4px", "1.5": "6px", "2": "8px", "3": "12px", "4": "16px",
+            "5": "20px", "6": "24px", "8": "32px", "10": "40px", "12": "48px", "16": "64px",
+            "20": "80px", "24": "96px"
+          },
+          borderRadius: {
+            'xs': '6px', 'sm': '10px', 'md': '14px', 'lg': '20px', 'xl': '24px', '2xl': '32px'
+          },
+          borderWidth: {
+            'thin': '1px',
+            'regular': '1.5px',
+            'thick': '2px',
+          },
+          height: {
+            'control-sm': '32px', 'control-md': '40px', 'control-lg': '48px',
+          },
+          colors: {
+            yt: {
+              primary: { 600: '#00C8E6', 500: '#00E5FF', 400: '#4FEFFF' },
+              secondary: { 600: '#E03BB3', 500: '#FF4DCC', 400: '#FF84DE' },
+              accent: { focus: '#A78BFA', highlight: '#F59E0B' },
+              neutral: {
+                bg: { 950: '#0B0F14', 900: '#111827', 800: '#1F2937' },
+                border: '#334155', borderStrong: '#475569',
+                text: '#FFFFFF', text2: '#E5E7EB', text3: '#9CA3AF'
+              },
+              semantic: {
+                success: '#22C55E', warning: '#F59E0B',
+                danger: '#EF4444', info: '#38BDF8'
+              }
+            }
+          },
+          boxShadow: {
+            yt1: '0 1px 2px rgba(0,0,0,.40)',
+            yt2: '0 8px 24px rgba(0,0,0,.45)',
+            yt3: '0 16px 40px rgba(0,0,0,.50)',
+            glowPrimary: '0 0 24px #00E5FF80',
+            glowSecondary: '0 0 24px #FF4DCC80'
+          }
+        }
+      }
+    }
+  </script>
 </head>
-  <body class="bg-gray-900 text-white">
+  <body class="bg-yt-neutral-bg-950 text-yt-neutral-text font-sans font-medium text-body leading-body">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
